--- a/UITest/Base.lproj/Main.storyboard
+++ b/UITest/Base.lproj/Main.storyboard
@@ -289,16 +289,16 @@
                                 </variation>
                                 <variation key="heightClass=compact-widthClass=compact">
                                     <mask key="constraints">
+                                        <exclude reference="K0k-6e-bek"/>
+                                        <exclude reference="tTs-ZL-vV8"/>
                                         <exclude reference="KPt-Hd-3ZM"/>
                                         <include reference="Zf3-Br-mIl"/>
-                                        <exclude reference="K0k-6e-bek"/>
                                         <exclude reference="ZeH-kS-IUg"/>
                                         <include reference="bwG-BZ-OZY"/>
                                         <include reference="it6-zn-I3X"/>
                                         <exclude reference="K2s-vk-Cc7"/>
                                         <include reference="ZzI-c4-IOf"/>
                                         <include reference="kFK-n6-U8g"/>
-                                        <exclude reference="tTs-ZL-vV8"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=compact-widthClass=regular">
@@ -507,9 +507,12 @@
                                     <view contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E6h-W3-1Vd">
                                         <rect key="frame" x="20" y="52" width="374" height="163"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfM-Cg-rHI">
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gfM-Cg-rHI">
                                                 <rect key="frame" x="14" y="14" width="21" height="14"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="21" id="w2C-Ow-Gzt"/>
+                                                    <constraint firstAttribute="height" constant="14" id="z3h-D5-hNi"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                                 <state key="normal" image="arrow-back"/>
                                                 <connections>
@@ -568,6 +571,7 @@
                                             <constraint firstAttribute="trailing" secondItem="JyZ-ym-on0" secondAttribute="trailing" constant="451" id="2ab-8K-TGl"/>
                                             <constraint firstItem="82v-sR-I2V" firstAttribute="leading" secondItem="E6h-W3-1Vd" secondAttribute="leading" constant="471" id="49N-cP-RiY"/>
                                             <constraint firstItem="8zf-mr-nvi" firstAttribute="leading" secondItem="E6h-W3-1Vd" secondAttribute="leading" constant="349" id="5TH-1f-L29"/>
+                                            <constraint firstItem="gfM-Cg-rHI" firstAttribute="top" secondItem="E6h-W3-1Vd" secondAttribute="top" constant="14" id="8BZ-Op-OAX"/>
                                             <constraint firstItem="8zf-mr-nvi" firstAttribute="top" secondItem="E6h-W3-1Vd" secondAttribute="top" constant="48" id="9mR-9J-lPg"/>
                                             <constraint firstItem="8zf-mr-nvi" firstAttribute="leading" secondItem="E6h-W3-1Vd" secondAttribute="leading" constant="426" id="BUu-63-xyP"/>
                                             <constraint firstItem="82v-sR-I2V" firstAttribute="top" secondItem="E6h-W3-1Vd" secondAttribute="top" constant="100" id="C8z-DL-kAJ"/>
@@ -577,6 +581,7 @@
                                             <constraint firstAttribute="trailing" secondItem="82v-sR-I2V" secondAttribute="trailing" constant="45" id="KCu-wF-8DB"/>
                                             <constraint firstItem="82v-sR-I2V" firstAttribute="top" secondItem="E6h-W3-1Vd" secondAttribute="top" constant="47" id="MI5-ju-eQf"/>
                                             <constraint firstItem="82v-sR-I2V" firstAttribute="leading" secondItem="E6h-W3-1Vd" secondAttribute="leading" constant="73" id="OMU-08-Cnh"/>
+                                            <constraint firstItem="gfM-Cg-rHI" firstAttribute="leading" secondItem="E6h-W3-1Vd" secondAttribute="leading" constant="14" id="PUc-Cv-x9X"/>
                                             <constraint firstAttribute="height" constant="99" id="UQu-iZ-xBY"/>
                                             <constraint firstItem="8zf-mr-nvi" firstAttribute="top" secondItem="E6h-W3-1Vd" secondAttribute="top" constant="47" id="VI9-To-1kI"/>
                                             <constraint firstAttribute="height" constant="99" id="dVH-Cr-2i3"/>
@@ -1171,6 +1176,13 @@
                                 </userDefinedRuntimeAttributes>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="aAf-af-kXF"/>
+                                        <exclude reference="bh3-3a-lVL"/>
+                                        <exclude reference="q0e-3x-zfF"/>
+                                        <exclude reference="VJt-zN-pLX"/>
+                                        <exclude reference="bf6-mW-OtF"/>
+                                        <exclude reference="D3R-bc-xUO"/>
+                                        <exclude reference="kBU-Fs-4Pd"/>
                                         <exclude reference="0GM-AV-yJC"/>
                                         <exclude reference="DqO-91-TSj"/>
                                         <exclude reference="GWJ-xe-2kp"/>
@@ -1180,15 +1192,8 @@
                                         <exclude reference="vit-6f-umr"/>
                                         <exclude reference="wRI-rr-MQs"/>
                                         <exclude reference="wjP-BS-Sju"/>
-                                        <exclude reference="aAf-af-kXF"/>
-                                        <exclude reference="bh3-3a-lVL"/>
-                                        <exclude reference="q0e-3x-zfF"/>
-                                        <exclude reference="VJt-zN-pLX"/>
-                                        <exclude reference="bf6-mW-OtF"/>
                                         <exclude reference="Tmj-tr-Ah1"/>
                                         <exclude reference="gb0-gr-LC0"/>
-                                        <exclude reference="D3R-bc-xUO"/>
-                                        <exclude reference="kBU-Fs-4Pd"/>
                                         <exclude reference="cwW-PW-6Pc"/>
                                         <exclude reference="mtW-5c-XOf"/>
                                         <exclude reference="G4n-Ll-EzK"/>
@@ -1215,21 +1220,21 @@
                                 </variation>
                                 <variation key="heightClass=compact-widthClass=compact">
                                     <mask key="constraints">
+                                        <exclude reference="aAf-af-kXF"/>
+                                        <include reference="q0e-3x-zfF"/>
+                                        <exclude reference="uQg-5f-Snr"/>
+                                        <exclude reference="CeD-Ln-v33"/>
+                                        <include reference="bf6-mW-OtF"/>
+                                        <exclude reference="H1Y-6y-87v"/>
+                                        <include reference="kBU-Fs-4Pd"/>
                                         <exclude reference="36Y-D4-5cE"/>
                                         <exclude reference="BEL-B9-dRI"/>
                                         <exclude reference="Dqm-fg-NxN"/>
                                         <include reference="GWJ-xe-2kp"/>
                                         <include reference="vit-6f-umr"/>
                                         <include reference="wjP-BS-Sju"/>
-                                        <exclude reference="aAf-af-kXF"/>
-                                        <include reference="q0e-3x-zfF"/>
-                                        <exclude reference="uQg-5f-Snr"/>
-                                        <exclude reference="CeD-Ln-v33"/>
-                                        <include reference="bf6-mW-OtF"/>
                                         <exclude reference="CeJ-sR-kEV"/>
                                         <include reference="gb0-gr-LC0"/>
-                                        <exclude reference="H1Y-6y-87v"/>
-                                        <include reference="kBU-Fs-4Pd"/>
                                         <include reference="cwW-PW-6Pc"/>
                                         <exclude reference="eKc-WT-iOV"/>
                                         <exclude reference="RcI-Lc-gJC"/>
@@ -1247,6 +1252,12 @@
                                 </variation>
                                 <variation key="heightClass=compact-widthClass=regular">
                                     <mask key="constraints">
+                                        <include reference="bh3-3a-lVL"/>
+                                        <exclude reference="uQg-5f-Snr"/>
+                                        <exclude reference="CeD-Ln-v33"/>
+                                        <include reference="VJt-zN-pLX"/>
+                                        <include reference="D3R-bc-xUO"/>
+                                        <exclude reference="H1Y-6y-87v"/>
                                         <include reference="0GM-AV-yJC"/>
                                         <exclude reference="36Y-D4-5cE"/>
                                         <exclude reference="BEL-B9-dRI"/>
@@ -1257,14 +1268,8 @@
                                         <exclude reference="rTp-Dh-fpn"/>
                                         <include reference="riD-aa-5EN"/>
                                         <include reference="wRI-rr-MQs"/>
-                                        <include reference="bh3-3a-lVL"/>
-                                        <exclude reference="uQg-5f-Snr"/>
-                                        <exclude reference="CeD-Ln-v33"/>
-                                        <include reference="VJt-zN-pLX"/>
                                         <exclude reference="CeJ-sR-kEV"/>
                                         <include reference="Tmj-tr-Ah1"/>
-                                        <include reference="D3R-bc-xUO"/>
-                                        <exclude reference="H1Y-6y-87v"/>
                                         <exclude reference="eKc-WT-iOV"/>
                                         <include reference="mtW-5c-XOf"/>
                                         <include reference="G4n-Ll-EzK"/>
@@ -1320,9 +1325,9 @@
                         </variation>
                         <variation key="heightClass=compact-widthClass=compact">
                             <mask key="constraints">
+                                <exclude reference="OS5-uO-xZR"/>
                                 <exclude reference="3WJ-mf-jVK"/>
                                 <include reference="O23-dk-VrA"/>
-                                <exclude reference="OS5-uO-xZR"/>
                                 <include reference="YQI-r2-qOw"/>
                                 <include reference="YYt-1f-ant"/>
                                 <exclude reference="Z79-lB-C3Q"/>
@@ -1653,10 +1658,10 @@
                                 <viewLayoutGuide key="safeArea" id="qzO-cF-xth"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="Dwj-ee-muc"/>
-                                        <exclude reference="l35-WJ-WMt"/>
                                         <exclude reference="g0Z-Fh-ewK"/>
                                         <exclude reference="ze5-YR-XfY"/>
+                                        <exclude reference="Dwj-ee-muc"/>
+                                        <exclude reference="l35-WJ-WMt"/>
                                         <exclude reference="5QA-QZ-vmn"/>
                                         <exclude reference="6Gs-iW-jeh"/>
                                         <exclude reference="lwT-Wv-n5q"/>
@@ -1677,10 +1682,10 @@
                                 </variation>
                                 <variation key="heightClass=compact-widthClass=regular">
                                     <mask key="constraints">
-                                        <exclude reference="CSs-h9-5vs"/>
-                                        <include reference="l35-WJ-WMt"/>
                                         <exclude reference="g0Z-Fh-ewK"/>
                                         <include reference="ze5-YR-XfY"/>
+                                        <exclude reference="CSs-h9-5vs"/>
+                                        <include reference="l35-WJ-WMt"/>
                                         <exclude reference="i1b-Xo-cnt"/>
                                         <exclude reference="lwT-Wv-n5q"/>
                                         <include reference="vDa-09-Qva"/>
